--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <h2>信息安全课程平台</h2>
                 <h4>Information Security Course Platform</h4>
             </div>
-
+  
             <!-- <div class="btn-circle-scroll fadeIn">
                 <a href="#section-footer" class="btn-circle">
                     <i class="fa fa-angle-double-down animated"></i>
@@ -309,12 +309,9 @@
 
                     <div class="col-sm-4">
                         <div class="physical-address">
-
                             <address>
                                 <img src="image/university.png" alt="">
                                 中国地质大学（武汉） 计算机学院<br>
-                                地址：湖北省武汉东湖新技术开发区锦程街68号<br>                              
-                                邮编：430078<br>
                                 网址：https://cs.cug.edu.cn
                             </address>
 
@@ -343,6 +340,8 @@
                         </div>
                     </div>
                     <p>Copyright &copy; 2021 中国地质大学（武汉）计算机学院</p>
+                    <p>地址：湖北省武汉东湖新技术开发区锦程街68号 &nbsp;&nbsp;&nbsp;&nbsp;邮编：430078</p>
+                    <p>鄂ICP备 xxxxxxxx号-1</p>
                 </div>
             </div>
         </div>
