添加相关链接

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             <a href="https://www.bilibili.com/video/BV1Ht411w7Re?from=search&seid=7030072191213512701">
                                 <li>
                                     <img src="image/tuijian/2.jpg">
-                                    <h4>Cryptography-Stanford University</h4>
+                                    <h4>Cryptography（密码学）-Stanford University</h4>
                                     <p><span>关键词</span> • 密码学</p>
                                 </li>
                             </a>
@@ -132,19 +132,18 @@
                     <!-- web -->
                     <p style="margin-top: 20px; margin-bottom: 20px;">相关链接</p>
                     <a style="display: block; font-size: 20px;"
-                        href="https://github.com/Mikoto10032/DeepLearning">深度学习教程</a>
-                    <a style="display: block; font-size: 20px;" href="https://pytorch.org/tutorials/">PyTorch教程</a>
+                        href="https://www.icourse163.org/search.htm?search=%E4%BF%A1%E6%81%AF%E5%AE%89%E5%85%A8#/">信息安全基础</a>
+                    <a style="display: block; font-size: 20px;" href="https://www.icourse163.org/channel/3002.htm?cate=1001054001">网络与安全技术</a>
                     <a style="display: block; font-size: 20px;"
-                        href="https://www.tensorflow.org/tutorials?hl=zh-cn">TensorFlow教程</a>
+                        href="https://github.com/riusksk/secbook">信息安全丛书</a>
                     <a style="display: block; font-size: 20px;"
-                        href="https://pytorch123.com/SecondSection/training_a_classifier/">PyTorch小案例</a>
+                        href="https://xlab.tencent.com/cn/">腾讯安全玄武实验室</a>
 
                 </div>
             </div>
         </div>
     </section>
-    <!-- /.course -->
-    <!-- <div class="copyrights">Collect from <a href="https://www.webmoban.net">手机网站模板</a></div> -->
+
 
     <!-- services -->
     <section class="services" id="services">
@@ -153,7 +152,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="wow bounceInLeft" data-wow-delay="0.1s">
-                        <h2>推荐课程</h2>
+                        <h2>更多方向</h2>
                     </div>
                 </div>
             </div>
@@ -203,11 +202,9 @@
                 </div>
                 <!-- web -->
                 <p style="margin-top: 20px; margin-bottom: 20px;">相关链接</p>
-                <a style="display: block; font-size: 20px;"
-                    href="https://www.guru99.com/what-is-big-data.html">什么是大数据?</a>
                 <a style="display: block; font-size: 20px;" href="https://pytorch.org/tutorials/">数据科学(威斯康辛大学)</a>
                 <a style="display: block; font-size: 20px;"
-                    href="https://www.sisense.com/glossary/big-data-security/">什么是大数据安全?</a>
+                    href="https://www.sisense.com/glossary/big-data-security/">大数据安全</a>
                 <a style="display: block; font-size: 20px;"
                     href="https://www.dataversity.net/big-data-security-challenges-and-solutions/">大数据安全:挑战与解决方案</a>
 
