--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <!-- 4.box区域 -->
                 <div class="box w">
                     <div class="box-bd clearfix">
-                        <div>视频</div>
+                        <p style="margin-bottom: 10px;">视频</p>
                         <ul>
                             <a href="https://www.bilibili.com/video/BV1o7411B7Eh?from=search&seid=552070685559591263">
                                 <li>
@@ -131,7 +131,7 @@
                         </ul>
                     </div>
                     <!-- web -->
-                    <p style="margin-top: 20px; margin-bottom: 20px;">相关链接</p>
+                    <p style="margin-top: 20px; margin-bottom: 10px;">相关链接</p>
                     <a style="display: block; font-size: 20px;"
                         href="https://www.icourse163.org/search.htm?search=%E4%BF%A1%E6%81%AF%E5%AE%89%E5%85%A8#/">信息安全基础</a>
                     <a style="display: block; font-size: 20px;" href="https://www.icourse163.org/channel/3002.htm?cate=1001054001">网络与安全技术</a>
@@ -161,8 +161,7 @@
             <!-- 4.box区域 -->
             <div class="box w">
                 <div class="box-bd clearfix">
-                    <div>视频</div>
-
+                    <p style="margin-bottom: 10px;">视频</p>
                     <ul>
                         <a href="https://www.youtube.com/watch?v=1vbXmCrkT3Y">
                             <li>
@@ -218,7 +217,7 @@
     <!-- /.services -->
 
 
-    <section style="padding: 20px 75px;" id="download">
+    <section style="padding: 20px 75px; background-color: #FFFFFF;" id="download">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="wow bounceInLeft" data-wow-delay="0.1s">
@@ -229,7 +228,7 @@
     </section>
 
     <!-- testimonials -->
-    <section class="testimonials">
+    <section class="testimonials" style="background-color: #FFFFFF;">
         <div class="container">
 
             <!-- row -->
@@ -242,10 +241,10 @@
                     </div>
                     <div class="col-sm-9">
                         <blockquote>
-                            <p>
+                            <p class="pptintro">
                                 网络信息安全是一门涉及计算机科学、网络技术、通信技术、密码技术、信息安全技术、应用数学、数论、信息论等多种学科的综合性学科。它主要是指网络系统的硬件、软件及其系统中的数据受到保护，不受偶然的或者恶意的原因而遭到破坏、更改、泄露，系统连续可靠正常地运行，网络服务不中断。
                             </p>
-                            <footer class="blockquote-footer" style="background-color:#efefef">
+                            <footer class="blockquote-footer" style="background-color:#fefefe; font-size: 16px;">
                                 <cite title="Source Title"><a href="download-file/网络安全ppt.rar">点击下载课件PPT</a></cite>
                             </footer>
                         </blockquote>
@@ -264,10 +263,10 @@
                     </div>
                     <div class="col-sm-9">
                         <blockquote>
-                            <p>
+                            <p class="pptintro">
                                 密码学是研究编制密码和破译密码的技术科学。研究密码变化的客观规律，应用于编制密码以保守通信秘密的，称为编码学；应用于破译密码以获取通信情报的，称为破译学，总称密码学。
                             </p>
-                            <footer class="blockquote-footer" style="background-color:#efefef">
+                            <footer class="blockquote-footer" style="background-color:#fefefe; font-size: 16px;">
                                 <cite title="Source Title"><a href="download-file/网络安全ppt.rar">点击下载课件PPT</a></cite>
                             </footer>
                         </blockquote>
@@ -288,23 +287,6 @@
                     <div class="wow bounceInLeft" data-wow-delay="0.1s">
                         <h2>联系我们</h2>
                     </div>
-                    <!-- <div class="col-sm-8">
-                        <form class="my-form" role="form">
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="name" placeholder="名字">
-                            </div>
-                            <div class="form-group">
-                                <input type="email" class="form-control" id="email" placeholder="邮件">
-                            </div>
-                            <div class="form-group">
-                                <textarea class="form-control" name="message" id="message" rows="7" cols="25"
-                                    style="resize:none;" required="required" placeholder="输入信息"></textarea>
-                            </div>
-
-                            <button type="submit" class="btn btn-default btn-block">发送消息</button>
-                        </form>
-                    </div> -->
-
                     <div class="col-sm-4">
                         <div class="physical-address">
                             <address>
